FEAT : CodeRabbit에 따른 수정